<resources>
    <string name="app_name">CalmDine</string>
    <string name="action_settings">Settings</string>
    <string name="calm_dine"><b><big><big>C</big></big></b>ALM <b><big><big>D</big></big></b>INE</string>
    <string name="calm_dine_02"><b><big>C</big></b>ALM <b><big>D</big></b>INE</string>
    <string name="sub_heading">For a More Relaxed Dining Experience</string>

    <string name="login">Login</string>

    <string name="noAccount">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="map_description">Restaurants Around You</string>

    <string name="description_noise">Maximum Noise Intensity (dB)</string>
    <string name="description_light">Maximum Light Intensity (lux)</string>

    <string name="description_noise_recom">Max Noise Intensity (dB)</string>
    <string name="description_light_recom">Max Light Intensity (lux)</string>

    <string name="recommendation_header">Recommended Restaurants</string>

    <string-array name="noise_levels">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>any</item>
    </string-array>

    <string-array name="light_levels">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>any</item>
    </string-array>

    <string name="recommend">Recommend</string>
    <string name="noise">Noise :</string>
    <string name="light">Light :</string>
    <string name="current_rating">Current Rating :</string>

</resources>
