<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecommendationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorRedAppNameCard">

            <TextView
                android:id="@+id/txtAppName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/calm_dine_02"
                android:textSize="40sp" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/description_noise_recom" />

            <Spinner
                android:id="@+id/spinnerNoise"
                android:layout_width="80dp"
                android:layout_height="40dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/description_light_recom" />

            <Spinner
                android:id="@+id/spinnerLight"
                android:layout_width="80dp"
                android:layout_height="40dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txtRecommendationHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/recommendation_header" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRecommendations"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>